--- a/SklepexPOL.csproj
+++ b/SklepexPOL.csproj
@@ -171,5 +171,11 @@
   <ItemGroup>
     <Resource Include="images\dokumenty.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="sounds\delivery.mp3" />
+    <Content Include="sounds\beep.mp3" />
+    <Content Include="sounds\cash.mp3" />
+    <Content Include="sounds\bell.mp3" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
