--- a/SklepexPOL.csproj
+++ b/SklepexPOL.csproj
@@ -56,6 +56,9 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Model\clientRandomizer.cs" />
+    <Compile Include="Model\moneyCounter.cs" />
+    <Compile Include="Model\orders.cs" />
+    <Compile Include="Model\shopInfo.cs" />
     <Compile Include="Model\sqlmanager.cs" />
     <Compile Include="ViewModel\BaseClass\BaseViewModel.cs" />
     <Compile Include="ViewModel\BaseClass\RelayCommand.cs" />
