Formularz tworzenia nowej gry

--- a/App.config
+++ b/App.config
@@ -10,8 +10,14 @@
     </startup>
     <userSettings>
         <SklepexPOL.Properties.Settings>
-            <setting name="Ustawienie" serializeAs="String">
+            <setting name="SoldItemsString" serializeAs="String">
                 <value />
+            </setting>
+            <setting name="TodayDate" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ClientsCountValue" serializeAs="String">
+                <value>0</value>
             </setting>
         </SklepexPOL.Properties.Settings>
     </userSettings>
