save przed burzą

--- a/App.config
+++ b/App.config
@@ -19,6 +19,9 @@
             <setting name="ClientsCountValue" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="IsGameSaved" serializeAs="String">
+                <value>True</value>
+            </setting>
         </SklepexPOL.Properties.Settings>
     </userSettings>
 </configuration>
