--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="ClientsCountValue" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="IsGameSaved" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
