--- a/SklepexPOL.csproj
+++ b/SklepexPOL.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Model\shopInfo.cs" />
     <Compile Include="Model\sqlmanager.cs" />
     <Compile Include="Model\stringConventer.cs" />
+    <Compile Include="Model\structs.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="ViewModel\BaseClass\BaseViewModel.cs" />
     <Compile Include="ViewModel\BaseClass\RelayCommand.cs" />
