--- a/SklepexPOL.csproj
+++ b/SklepexPOL.csproj
@@ -70,6 +70,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="DAL\DBConnection.cs" />
     <Compile Include="Model\clientRandomizer.cs" />
     <Compile Include="Model\interactions.cs" />
     <Compile Include="Model\moneyCounter.cs" />
