synchronizacja gałęzi gita

--- a/App.config
+++ b/App.config
@@ -4,6 +4,9 @@
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="SklepexPOL.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="SklepexPOL.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
@@ -24,4 +27,23 @@
             </setting>
         </SklepexPOL.Properties.Settings>
     </userSettings>
+    <applicationSettings>
+        <SklepexPOL.Properties.Settings>
+            <setting name="server" serializeAs="String">
+                <value>localhost</value>
+            </setting>
+            <setting name="database" serializeAs="String">
+                <value>baza</value>
+            </setting>
+            <setting name="userID" serializeAs="String">
+                <value>root</value>
+            </setting>
+            <setting name="passwd" serializeAs="String">
+                <value>Haslo123</value>
+            </setting>
+            <setting name="port" serializeAs="String">
+                <value>3306</value>
+            </setting>
+        </SklepexPOL.Properties.Settings>
+    </applicationSettings>
 </configuration>
