skrypt sprawdzający stan, rodzaj i poziom sklepu

--- a/App.config
+++ b/App.config
@@ -25,6 +25,12 @@
             <setting name="IsGameSaved" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="LvlDays" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="warning" serializeAs="String">
+                <value>False</value>
+            </setting>
         </SklepexPOL.Properties.Settings>
     </userSettings>
     <applicationSettings>
