--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -29,5 +29,11 @@
     <Setting Name="port" Type="System.UInt16" Scope="Application">
       <Value Profile="(Default)">3306</Value>
     </Setting>
+    <Setting Name="LvlDays" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="warning" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
