usunięcie pustej klasy shopInfo Dodanie plików DAL/NaStanie.cs i NaStanieViewModel.cs do projektu kontrolka dialogowa pobierająca od użytkownika hasło i login do roota szbd aktualizacja pliku bazy danych utworzenie skryptu sprawdzającego połączenie z serwerem i bazą danych utworzenie działającego skryptu importowania bazy z pliku sql

--- a/App.config
+++ b/App.config
@@ -31,6 +31,12 @@
             <setting name="warning" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="Rpasswd" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Rlogin" serializeAs="String">
+                <value />
+            </setting>
         </SklepexPOL.Properties.Settings>
     </userSettings>
     <applicationSettings>
