--- a/SklepexPOL.csproj
+++ b/SklepexPOL.csproj
@@ -72,11 +72,11 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="DAL\DBConnection.cs" />
+    <Compile Include="DAL\NaStanie.cs" />
     <Compile Include="Model\clientRandomizer.cs" />
     <Compile Include="Model\interactions.cs" />
     <Compile Include="Model\moneyCounter.cs" />
     <Compile Include="Model\orders.cs" />
-    <Compile Include="Model\shopInfo.cs" />
     <Compile Include="Model\sqlmanager.cs" />
     <Compile Include="Model\stringConventer.cs" />
     <Compile Include="Model\structs.cs" />
@@ -84,8 +84,12 @@
     <Compile Include="ViewModel\BaseClass\BaseViewModel.cs" />
     <Compile Include="ViewModel\BaseClass\RelayCommand.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
+    <Compile Include="ViewModel\NaStanieViewModel.cs" />
     <Compile Include="View\data.xaml.cs">
       <DependentUpon>data.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\dialog.xaml.cs">
+      <DependentUpon>dialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\game.xaml.cs">
       <DependentUpon>game.xaml</DependentUpon>
@@ -127,6 +131,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="View\data.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\dialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
